# mastermobile

./: .codespellrc  .dockerignore  .editorconfig  .env.dev.example  .env.example  .gitattributes  .gitignore  .lychee.toml  .markdownlint.yml  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.dev.override.yml  docker-compose.yml  openapi.yaml  pyproject.toml  requirements.txt
1c/: README.md  verification_manifest.json
apps/: __init__.py
backend/: README.md
constitution/: mastermobile_principles.md
docs/: 00-Core_glossary-status.md  00‑Core — Синхронизация документации.md  API‑Contracts v1.1.md  API‑Contracts.md  ER‑диаграмма и DDL.md  HOWTO — Ассистент сотрудников MasterMobile.md  ONE-PAGER — Ассистент мастера v0.1.md  ONE-PAGER — Ассистент мастера.md  ONE-PAGER — Ассистент сотрудников MasterMobile v1.2.md  ONE-PAGER — Переход 1С: УТ 10.md  ONE-PAGER — Тексты звонков Bitrix24.md  ONE-PAGER-ХодячийРюкзак.md  PRD Ходячий склад.md  PRD — «Ассистент мастера.md  PRD — «Ассистент мастера».md  PRD — Переход 1С: УТ 10.md  PRD — Тексты звонков Bitrix24.md  SRS — Core Sync 1С: УТ 10.md  SRS — КМП4.md  SRS — Тексты звонков Bitrix24 (выгрузка за 60 дней).md  Software Requirements Specification SRS.md  UX-скетчи-Рюкзак:Продажа.md  constitution.md  nfr.md  observability.md  plan.md  Интеграция бота и Bitrix.md  Концепция проекта.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
httpx/: __init__.py
jobs/: __init__.py  call_export.py
mastermobile.git/: config  (+1 more)
(+220 files in other folders)
