[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mastermobile"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pytest>=8.2",
    "ruff>=0.5"
]

[tool.setuptools]
packages = ["apps", "httpx"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","UP","B"]
lint.ignore = ["E203","E501"]
format.preview = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --maxfail=1"
